--- a/index.html
+++ b/index.html
@@ -7,7 +7,40 @@
       <link rel="stylesheet" href="style.css">
 </head>
     <body>
-        
+        <div class="container">
+            <div class="display"><div>12</div></div>
+            <div class="columnContainer">
+                <div class="col">
+                    <button class="AC">AC</button>
+                    <button class="+/-">+/-</button>
+                    <button class="%">%</button>
+                    <button class="/">/</button>
+                </div>
+                <div class="col">
+                    <button class="seven">7</button>
+                    <button class="eight">8</button>
+                    <button class="nine">9</button>
+                    <button class="*">*</button>
+                </div>
+                <div class="col">
+                    <button class="four">4</button>
+                    <button class="five">5</button>
+                    <button class="six">6</button>
+                    <button class="-">-</button>
+                </div>
+                <div class="col">
+                    <button class="one">1</button>
+                    <button class="two">2</button>
+                    <button class="three">3</button>
+                    <button class="+">+</button>
+                </div>
+                <div class="col">
+                    <button class="zero">0</button>
+                    <button class=".">.</button>
+                    <button class="=">=</button>
+                </div>
+            </div>
+        </div>
     </body>
     <script src="script.js"></script>
 </html>
