--- a/index.html
+++ b/index.html
@@ -8,36 +8,36 @@
 </head>
     <body>
         <div class="container">
-            <div class="display"><div>12</div></div>
+            <div class="display"><div>69420</div></div>
             <div class="columnContainer">
                 <div class="col">
-                    <button class="AC">AC</button>
-                    <button class="+/-">+/-</button>
-                    <button class="%">%</button>
-                    <button class="/">/</button>
+                    <button class="function">AC</button>
+                    <button class="function">+/-</button>
+                    <button class="function">%</button>
+                    <button class="operator">/</button>
                 </div>
                 <div class="col">
-                    <button class="seven">7</button>
-                    <button class="eight">8</button>
-                    <button class="nine">9</button>
-                    <button class="*">*</button>
+                    <button class="operand">7</button>
+                    <button class="operand">8</button>
+                    <button class="operand">9</button>
+                    <button class="operator">*</button>
                 </div>
                 <div class="col">
-                    <button class="four">4</button>
-                    <button class="five">5</button>
-                    <button class="six">6</button>
-                    <button class="-">-</button>
+                    <button class="operand">4</button>
+                    <button class="operand">5</button>
+                    <button class="operand">6</button>
+                    <button class="operator">-</button>
                 </div>
                 <div class="col">
-                    <button class="one">1</button>
-                    <button class="two">2</button>
-                    <button class="three">3</button>
-                    <button class="+">+</button>
+                    <button class="operand">1</button>
+                    <button class="operand">2</button>
+                    <button class="operand">3</button>
+                    <button class="operator">+</button>
                 </div>
                 <div class="col">
-                    <button class="zero">0</button>
-                    <button class=".">.</button>
-                    <button class="=">=</button>
+                    <button class="operand" style="flex: 2.23;">0</button>
+                    <button class="operand">.</button>
+                    <button class="operator">=</button>
                 </div>
             </div>
         </div>
