Make equal button now print result to display AND fixed some minor styling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
     <body>
         <div class="container">
-            <div class="display"><div>69420</div></div>
+            <div class="display"><div>0</div></div>
             <div class="columnContainer">
                 <div class="col">
                     <button class="function">AC</button>
@@ -35,9 +35,9 @@
                     <button class="operator">+</button>
                 </div>
                 <div class="col">
-                    <button class="operand" style="flex: 2.23;">0</button>
+                    <button class="operand zero">0</button>
                     <button class="operand">.</button>
-                    <button class="operator">=</button>
+                    <button class="equal">=</button>
                 </div>
             </div>
         </div>
