--- a/index.html
+++ b/index.html
@@ -7,37 +7,33 @@
       <link rel="stylesheet" href="style.css">
 </head>
     <body>
+        <div class="header">Calculator</div>
         <div class="container">
             <div class="display"><div>0</div></div>
             <div class="columnContainer">
                 <div class="col">
-                    <button class="function">AC</button>
-                    <button class="function">+/-</button>
-                    <button class="function">%</button>
-                    <button class="operator">/</button>
-                </div>
-                <div class="col">
                     <button class="operand">7</button>
                     <button class="operand">8</button>
                     <button class="operand">9</button>
-                    <button class="operator">*</button>
+                    <button class="operator">/</button>
                 </div>
                 <div class="col">
                     <button class="operand">4</button>
                     <button class="operand">5</button>
                     <button class="operand">6</button>
-                    <button class="operator">-</button>
+                    <button class="operator">*</button>
                 </div>
                 <div class="col">
                     <button class="operand">1</button>
                     <button class="operand">2</button>
                     <button class="operand">3</button>
-                    <button class="operator">+</button>
+                    <button class="operator">-</button>
                 </div>
                 <div class="col">
+                    <button class="clear">AC</button>
                     <button class="operand zero">0</button>
-                    <button class="operand">.</button>
                     <button class="equal">=</button>
+                    <button class="operator">+</button>
                 </div>
             </div>
         </div>
